Modificacion en Inmuebles Listar Disponibles